# phone-farm

./: .gitignore  CLAUDE.md  README.md  test-e2e.mjs  test-vlm-e2e.mjs  vlm-api-spec.yaml
.claude/: settings.json
.github/workflows/: android-ci.yml  android-release.yml
.wolf/: buglog.json  cerebrum.md  memory.md
android-bridge/: ad-deeke-tasks.json  app-automation.js  inspect-at-coord.js  node-inspector.js  remote-bridge.js  task_dy_toker.js  version.json
android-bridge/autox-v7/: compat-test.js  compat.js  inspect-at-coord.js  node-inspector.js  remote-bridge.js  version.json
android-bridge/autox-v7/lib/: device-info.js  script-loader.js  task-context.js  ws-client.js
android-bridge/autox-v7/tasks/: task_dy_fans_inc_main.js  task_dy_toker.js  task_ks_toker.js  task_xhs_yanghao.js
android-client/: build-output.txt  build.gradle.kts  gradle.properties  local.properties  settings.gradle.kts
android-client/app/: build.gradle.kts  proguard-rules.pro
android-client/app/src/main/cpp/: CMakeLists.txt  llama_jni_stub.cpp  mnn_llm_jni.cpp  ncnn_yolo_jni.cpp
android-client/gradle/: libs.versions.toml
control-server/: Dockerfile  drizzle.config.ts  ecosystem.config.cjs  package-lock.json  package.json
control-server/migrations/: 0000_initial.sql  0000_unique_kingpin.sql  0001_vlm.sql  0002_edge_memory.sql  0002_persistent_stores.sql  0003_config_management.sql  0003_persistent_stores.sql  0004_ai_assistant.sql  0005_billing.sql  0006_user_management.sql  0007_billing_enhance.sql  0007_config_management.sql  0008_card_batches.sql  0009_agents.sql  0010_api_platform.sql  0011_whitelabel.sql  0012_tenants.sql  0014_role_permissions.sql
control-server/migrations/meta/: 0000_snapshot.json  _journal.json
control-server/proto/: control-message.d.ts  control-message.js  control-message.proto  video-message.d.ts  video-message.js  video-message.proto
control-server/src/: config.ts  db.ts  dev-db.ts  dev-server.ts  device-config-routes.ts  device-group-routes.ts  index.ts  model-routes.ts  platform-account-routes.ts  routes.ts  schema.ts  scripts-manifest-routes.ts  vps-relay.ts  ws-hub.ts
control-server/src/account/: account-delete-routes.ts
control-server/src/activation/: activation-routes.ts  activation-store.ts  card-key-routes.ts
control-server/src/agent/: agent-routes.ts  agent-schema.ts  agent-service.ts  batch-service.ts  commission-calculator.ts
control-server/src/ai-memory/: ai-memory-routes.ts  anthropic-client.ts  deepseek-advisor.ts  memory-scheduler.ts
control-server/src/ai-orchestrator/: ai-bridge-router.ts  ai-claude-cli.ts  ai-deepseek-worker.ts  types.ts
control-server/src/alerts/: alert-engine.ts  alert-routes.ts
control-server/src/assistant/: admin-assistant-executor.ts  admin-assistant-routes.ts  admin-assistant-tools.ts  assistant-config-routes.ts  llm-proxy-routes.ts
control-server/src/audit/: audit-routes.ts  audit-schema.ts  audit-service.ts
control-server/src/auth/: admin-user-routes.ts  api-key-auth.ts  api-key-routes.ts  auth-middleware.ts  permission-routes.ts  rbac.ts  sms-service.ts  user-routes.ts
control-server/src/billing/: admin-credit-routes.ts  alipay.ts  billing-routes.ts  billing-schema.ts  credit-routes.ts  credit-service.ts  invoice-service.ts  payment-gateway.ts  payment-routes.ts  payment-schema.ts  payment-webhook.ts  plan-seed.ts  subscription-scheduler.ts  wechat-pay.ts
control-server/src/cluster/: cluster-bridge.ts
control-server/src/config-manager/: config-definitions.ts  config-resolver.ts  config-routes.ts  config-schema.ts  runtime-config.ts  system-config-routes.ts
control-server/src/crash/: crash-routes.ts
control-server/src/decision/: decision-engine.ts  decision-router.ts  decision-routes.ts  deepseek-client.ts  prompt-builder.ts  qwen-vl-client.ts  safety-guard.ts  types.ts
control-server/src/edge/: state-ingestor.ts  state-store.ts
control-server/src/memory/: experience-compiler.ts  memory-retriever.ts  memory-routes.ts  memory-store.ts
control-server/src/nats/: nats-sync.ts
control-server/src/openapi/: api-key-management-routes.ts  openapi-auth.ts  openapi-billing.ts  openapi-docs.ts  openapi-rate-limiter.ts  openapi-routes.ts  openapi-schema.ts
control-server/src/portal/: portal-routes.ts  usage-service.ts
control-server/src/proto/: protobuf-codec.ts
control-server/src/queue/: queue-routes.ts  redis-client.ts  task-queue.ts
control-server/src/ray/: ray-client.ts
control-server/src/relay/: bridge-client.ts  bridge-server.ts  relay-server.ts
control-server/src/remote/: remote-command-handler.ts  remote-command-routes.ts
control-server/src/scrcpy/: index.ts  (+12 more)
dashboard/: package-lock.json  package.json  vite.config.ts
dashboard/src/: App.tsx  index.css
deploy/: .env.example  DEPLOY_CHECKLIST.txt  docker-compose.yml  nginx.conf
deploy/coturn/: turnserver.conf
deploy/local/: .env.example  docker-compose.yml  nginx.conf
deploy/nats/: nats-server.conf
deploy/ray/: ray-cluster.yaml
deploy/scripts/: check-resources.ps1  deploy-fullstack.ps1  deploy.ps1  ecosystem-infra.config.js  fix-redis-eviction.ps1  fix-redis.ps1  health-check.ps1  log-rotate.ps1  memory-guard.ps1  optimize-vps.ps1  redis.conf  setup-coturn.ps1  setup-minio.ps1  setup-nats.ps1  setup-scheduler.ps1  setup-ssh.ps1  setup-vps-infra.ps1  setup-vps-services.ps1  sync-to-vps.ps1  upgrade-redis.ps1  vps-deploy-coturn.ps1
deploy/vps-relay/: .env.example  AI_ORCHESTRATOR.md  Caddyfile  Dockerfile  WINDOWS_DEPLOY.md  deploy-relay.ps1  docker-compose.yml  nginx.conf  nginx.production.conf  package-for-vps.ps1  vps-update.ps1
docs/: CODING-STANDARDS.md  DEPLOYMENT.md  DEVELOPMENT_PLAN.md  EDGE_CLOUD_ARCHITECTURE_SPEC.md  OPTIMIZATION-PLAN.md  development-standards.md  phase-e-comprehensive-report.md
edge-node/: go.mod
edge-node/ai/: main.py  requirements.txt
edge-node/cmd/: main.go
turn-server/: go.mod  go.sum  main.go  start-turn.ps1
vlm-bridge/: requirements.txt  server.py  test_bridge.py
vlm-bridge/bot/: __init__.py  wecom_bot.py
vlm-bridge/memory/: __init__.py  memory_manager.py
(+455 files in other folders)
